# turtlebot3_deliver

./: CMakeLists.txt  README.md
src/: service_core.cpp
turtlebot3_carrier_green/ROBOTIS-utility/robotis_utility/: CHANGELOG.rst  package.xml
turtlebot3_carrier_green/ROBOTIS-utility/ros_mpg321_player/launch/: ros_mpg321_player.launch  ros_mpg321_player_red.launch
turtlebot3_carrier_green/ROBOTIS-utility/ros_mpg321_player/src/: ros_mpg321_player.cpp
turtlebot3_carrier_green/geometry2/geometry2/: package.xml
turtlebot3_carrier_green/turtlebot3/turtlebot3_bringup/launch/: turtlebot3_model.launch  turtlebot3_remote.launch  turtlebot3_robot.launch  turtlebot3_robot_green.launch  turtlebot3_robot_purple.launch  turtlebot3_robot_red.launch
turtlebot3_carrier_green/turtlebot3/turtlebot3_navigation/launch/: turtlebot3_navigation.launch  turtlebot3_navigation_green.launch  turtlebot3_navigation_purple.launch  turtlebot3_navigation_red.launch
turtlebot3_carrier_green/turtlebot3/turtlebot3_navigation/maps/: map.pgm  map.yaml
turtlebot3_carrier_green/turtlebot3/turtlebot3_navigation/param/: dwa_local_planner_params.yaml
turtlebot3_carrier_green/turtlebot3/turtlebot3_navigation/rviz/: turtlebot3_nav.rviz
turtlebot3_carrier_green/turtlebot3/turtlebot3_slam/launch/: turtlebot3_slam _green.launch  turtlebot3_slam _purple.launch  turtlebot3_slam _red.launch  turtlebot3_slam.launch  turtlebot3_slam_green.launch
turtlebot3_carrier_green/turtlebot3/turtlebot3_slam/rviz/: turtlebot3_slam.rviz
turtlebot3_carrier_green/turtlebot3/turtlebot3_teleop/launch/: turtlebot3_teleop_key.launch  turtlebot3_teleop_key_green.launch  turtlebot3_teleop_key_purple.launch  turtlebot3_teleop_key_red.launch
turtlebot3_carrier_green/turtlebot3/turtlebot3_teleop/scripts/: turtlebot3_teleop_key
turtlebot3_carrier_icra2017/: CMakeLists.txt  README.md  package.xml
turtlebot3_carrier_icra2017/launch/: pad_virtual_green.launch  pad_virtual_purple.launch  pad_virtual_red.launch  pose_initialization_green.launch  service_core.launch
turtlebot3_carrier_icra2017/msg/: AvailableItemList.msg  ServiceStatus.msg
turtlebot3_carrier_icra2017/param/: initial_pose.yaml  target_pose.yaml
turtlebot3_carrier_icra2017/src/: call_initial_pose.cpp  pad_virtual.cpp  pose_initialization.cpp  service_core.cpp
turtlebot3_carrier_icra2017_common/ROBOTIS-utility/: README.md
turtlebot3_carrier_icra2017_common/ROBOTIS-utility/robotis_utility/: CMakeLists.txt
turtlebot3_carrier_icra2017_common/ROBOTIS-utility/ros_madplay_player/: CHANGELOG.rst  CMakeLists.txt  package.xml
turtlebot3_carrier_icra2017_common/ROBOTIS-utility/ros_madplay_player/include/ros_madplay_player/: ros_madplay_player.h
turtlebot3_carrier_icra2017_common/ROBOTIS-utility/ros_madplay_player/src/: ros_madplay_player.cpp
turtlebot3_carrier_icra2017_common/ROBOTIS-utility/ros_mpg321_player/: CHANGELOG.rst  CMakeLists.txt  package.xml
turtlebot3_carrier_icra2017_common/ROBOTIS-utility/ros_mpg321_player/include/ros_mpg321_player/: ros_mpg321_player.h
turtlebot3_carrier_icra2017_common/ROBOTIS-utility/ros_mpg321_player/launch/: ros_mpg321_player_green.launch  ros_mpg321_player_purple.launch
turtlebot3_carrier_icra2017_common/ROBOTIS-utility/ros_mpg321_player/src/: ros_mpg321_player.cpp
turtlebot3_carrier_icra2017_common/geometry2/tf2_ros/src/: static_transform_broadcaster.cpp  transform_broadcaster.cpp
turtlebot3_carrier_icra2017_common/hls_lfcd_lds_driver/src/: hlds_laser_publisher.cpp  hlds_laser_segment_publisher.cpp
turtlebot3_carrier_icra2017_common/turtlebot3/turtlebot3_bringup/launch/: turtlebot3_robot_green.launch  turtlebot3_robot_purple.launch  turtlebot3_robot_red.launch
turtlebot3_carrier_icra2017_common/turtlebot3/turtlebot3_navigation/launch/: turtlebot3_navigation_green.launch  turtlebot3_navigation_purple.launch  turtlebot3_navigation_red.launch  turtlebot3_navigation_rviz_purple.launch  turtlebot3_navigation_rviz_red.launch
turtlebot3_carrier_icra2017_common/turtlebot3/turtlebot3_navigation/maps/: map.pgm
turtlebot3_carrier_icra2017_common/turtlebot3/turtlebot3_navigation/param/: dwa_local_planner_params.yaml
turtlebot3_carrier_icra2017_common/turtlebot3/turtlebot3_navigation/rviz/: turtlebot3_nav_purple.rviz  turtlebot3_nav_red.rviz
turtlebot3_carrier_icra2017_common/turtlebot3/turtlebot3_slam/launch/: turtlebot3_slam_purple.launch  turtlebot3_slam_red.launch  turtlebot3_slam_rviz_green.launch  turtlebot3_slam_rviz_red.launch
turtlebot3_carrier_icra2017_common/turtlebot3/turtlebot3_slam/rviz/: turtlebot3_slam_purple.rviz  turtlebot3_slam_red.rviz
turtlebot3_carrier_icra2017_common/turtlebot3/turtlebot3_teleop/launch/: turtlebot3_teleop_key_green.launch  turtlebot3_teleop_key_red.launch
turtlebot3_core_ICRA/: turtlebot3_motor_driver.cpp  turtlebot3_motor_driver.h
turtlebot3_core_icra2017/: turtlebot3_core_config.h  turtlebot3_motor_driver.cpp
turtlebot3_deliver/: CMakeLists.txt  package.xml
turtlebot3_deliver/launch/: pad_virtual_purple.launch  pose_initialization_purple.launch  pose_initialization_red.launch
turtlebot3_deliver/msg/: PadOrder.msg
turtlebot3_deliver/src/: pose_initialization.cpp
turtlebot3_deliver_pad/: MainActivity.java  Talker.java
turtlebot3_deliver_service/: CMakeLists.txt  package.xml
turtlebot3_deliver_service/launch/: pad_virtual_green.launch  pad_virtual_purple.launch  pad_virtual_red.launch  pose_initialization_green.launch  pose_initialization_purple.launch  pose_initialization_red.launch  service_core.launch
turtlebot3_deliver_service/src/: call_initial_pose.cpp  pad_virtual.cpp  pose_initialization.cpp  service_core.cpp
turtlebot3_deliver_service/srv/: InitTurtlebotPose.srv
turtlebot3_pad_icra2017/green/android_core-indigo (2)/android_tutorial_pubsub/res/values/: strings.xml
turtlebot3_pad_icra2017/green/android_core-indigo (2)/gradle/wrapper/: gradle-wrapper.properties
turtlebot3_pad_icra2017/purple/android_core-indigo (2)/android_15/: build.gradle
turtlebot3_pad_icra2017/purple/android_core-indigo (2)/android_tutorial_pubsub/res/values/: strings.xml
(+12 files in other folders)
