<?xml version="1.0"?>
<package format="2">
  <name>turtlebot3_deliver</name>
  <version>0.1.0</version>
  <description>
    ROS packages for the turtlebot3_deliver (meta package)
  </description>
  <license>Apache 2.0</license>
  <author email="rwjung@robotis.com">Leon Jung</author>
  <maintainer email="pyo@robotis.com">Pyo</maintainer>
  <url type="website">http://wiki.ros.org/turtlebot3_deliver</url>
  <url type="emanual">http://turtlebot3.robotis.com</url>
  <url type="repository">https://github.com/ROBOTIS-GIT/turtlebot3_deliver</url>
  <url type="bugtracker">https://github.com/ROBOTIS-GIT/turtlebot3_deliver/issues</url>
  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>turtlebot3_deliver_service</exec_depend>
  <export><metapackage/></export>
</package>
