<?xml version="1.0"?>
<package>
  <name>ros_mpg321_player</name>
  <version>0.1.2</version>
  <description>
    This package is a node that can playing mp3 file.
    This package is using mpg321 which is command-line mp3 player.
  </description>
  <license>BSD</license>
  <author email="zerom@robotis.com">Zerom</author>
  <maintainer email="pyo@robotis.com">Pyo</maintainer>
  <url type="bugtracker">https://github.com/ROBOTIS-GIT/ROBOTIS-Utility/issues</url>
  <url type="repository">https://github.com/ROBOTIS-GIT/ROBOTIS-Utility</url>
  <url type="website">http://wiki.ros.org/ros_mpg321_player</url>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
</package>
